<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wuyinlei.activity.SuggestActivity">
    <include layout="@layout/find_top_bar_layout"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:text="问题类型"
        android:layout_marginTop="10dp"
        android:textSize="24dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_type"
        android:text="界面建议"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="65dp"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/item_arrow"
        android:layout_marginTop="10dp"
        android:src="@mipmap/arrow_one"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_marginRight="13dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_suggest"
        android:hint="@string/suggest"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:minLines="8"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/contact_way"
        android:layout_below="@+id/et_suggest"
        android:text="@string/contact_way"
        android:textSize="24dp"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_phone"
        android:layout_below="@+id/et_suggest"
        android:layout_toRightOf="@+id/contact_way"
        android:hint="必填"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_submmit"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/contact_way"
        android:layout_centerHorizontal="true"
        android:text="@string/subbmit"
        android:textSize="30dp"
        android:layout_width="300dp"
        android:background="@color/mask_tags_8"
        android:layout_height="wrap_content"/>

    </RelativeLayout>
</LinearLayout>
